proper shuffling, original image preview for 5s

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
     <div class="container">
-
+        <p>
+            Tiles will be shuffled in 5 seconds
+        </p>
         <div class="game-main">
             <div class="box 1"></div>
             <div class="box 2"></div>
@@ -38,7 +40,6 @@
             <div class="box 23"></div>
             <div class="box 24"></div>
             <div class="box 25"></div>
-            <box></box>
         </div>
 
     </div>
