--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./puzzle.png" type="image/x-icon">
     <title>Puzzle</title>
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -40,9 +41,13 @@
             <div class="box 23"></div>
             <div class="box 24"></div>
             <div class="box 25"></div>
+            <div class="winner">
+                YOU WON!
+            </div>
         </div>
 
     </div>
+
     <script src="./script.js"></script>
 </body>
 
