--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <p>
-            Tiles will be shuffled in 5 seconds
+            Tiles will be shuffled in <span class="timer">8</span>&nbsp;seconds
         </p>
         <div class="game-main">
             <div class="box 1"></div>
@@ -45,7 +45,6 @@
                 YOU WON!
             </div>
         </div>
-
     </div>
 
     <script src="./script.js"></script>
